--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/web-app/(.*)",
-      "destination": "/web-app/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
